--- a/CleanPc/CleanPc.csproj
+++ b/CleanPc/CleanPc.csproj
@@ -6,4 +6,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Security.Principal.Windows" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
